# smolclaw-fork

./: README.md  pyproject.toml
claw_discord/: __init__.py  cli.py  server.py  snowflake.py
claw_discord/api/: app.py  channels.py  deps.py  emoji.py  guilds.py  messages.py  roles.py  schemas.py  users.py  webhooks.py
claw_discord/mcp/: server.py
claw_discord/models/: __init__.py  ban.py  base.py  channel.py  emoji.py  guild.py  guild_member.py  invite.py  message.py  permission_overwrite.py  reaction.py  role.py  thread_member.py  user.py  webhook.py
claw_discord/seed/: generator.py
claw_discord/seed/content_library/: channels.py  messages.py  users.py
claw_discord/state/: action_log.py  snapshots.py
claw_discord/tasks/: __init__.py  base.py  registry.py
claw_gcal/api/: calendars.py  events.py  freebusy.py  schemas.py
claw_gcal/seed/: content.py  generator.py  long_context.py  task_seed.py
claw_gcal/seed/content_library/: __init__.py  operations.py  parameters.py  personal.py  personas.py  scenarios.py  security.py  templates.py  travel.py  work.py
claw_gcal/state/: snapshots.py
scripts/: capture_discord_fixtures.py  gws_calendar_mock_real_compare.py  gws_gmail_mock_real_compare.py  validate_gcal_seed.py
tests/: test_discord_api.py  test_discord_conformance.py  test_gcal_api.py  test_gcal_conformance.py  test_gcal_seed.py
tests/fixtures/: gcal_api_spec.json  mock_coverage_gcal.json
tests/fixtures/real_discord/: audit_log.json  channel_create_response.json  channel_get.json  channel_invites_list.json  channel_modify_response.json  (+24 more)
(+26 files in other folders)
