[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolclaws"
version = "0.1.0"
description = "Mock environments for AI agent testing"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "BenchFlow", email = "xiangyi@benchflow.ai" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "faker>=22.0",
    "click>=8.0",
    "httpx>=0.27.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
mcp = ["fastapi-mcp>=0.1.0"]
gym = ["gymnasium>=0.29.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-json-report>=1.5", "ruff>=0.3.0", "cryptography>=43.0"]
all = ["smolclaws[mcp,gym,dev]"]

[project.scripts]
smolclaw = "claw_gmail.cli:cli"
smolclaw-gcal = "claw_gcal.cli:cli"

[project.urls]
Homepage = "https://smolclaw.com"
Repository = "https://github.com/benchflow-ai/smolclaw"

[tool.setuptools.packages.find]
where = ["."]
include = ["claw_gmail*", "claw_gcal*"]
